# polygonio-mcp

./: .gitignore  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PHASE_2C_PR_BODY.md  README.md  SPRINT_2E_PR_BODY.md  Scratch.md  docker-compose.yml  gamification-vision.html  package-lock.json  package.json  vercel.json
.claude/: settings.local.json
agent/: .env.example  .gitignore  AGENT_README.md  Dockerfile  README.md  api.py  env.example  instrumentation.py  main.py  pyproject.toml  test_quandl.py
agent/cli/: __init__.py  app.py  messages.py
agent/core/: __init__.py  algo.py  backtest_executor.py  polygon_agent.py  sift_engine.py  sift_errors.py  sift_openai_provider.py  sift_router.py
client/: .env.example  .gitignore  .vercelignore  AGENT_README.md  Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
client/e2e/: production.spec.ts
client/regressions/: backtestChartData.regression.ts
client/scripts/: assert-no-backend-url.mjs  smoke-prod.mjs
client/src/: App.tsx  api.ts  constants.ts  main.tsx  styles.css  types.ts
dev/: GRAPH.md  README.md  dev.mjs  registry.yaml
dev/commands/: clean.mjs  dashboard.mjs  doctor.mjs  graph.mjs  health.mjs  logs.mjs  ports.mjs  restart.mjs  status.mjs  stop.mjs
dev/test/: graph.test.mjs  health.test.mjs  helpers.mjs  ordering.test.mjs  ports.test.mjs  profiles.test.mjs  registry.test.mjs
docs/: AGENT_ARCHITECTURE.md  AI_AGENT_INTEGRATION_DEMO.md  ALGORITHM_USE_CASES.md  LAB_AGENT_INTEGRATION.md  ROADMAP.md  SCHEMA_SPECIFICATION.md  SCREENER_INTEGRATION_GUIDE.md  SECURITY_ROTATION_REQUIRED.md  USER_FLOW_SPECIFICATION.md  V2_ARCHITECTURE.md  VERSION_HISTORY.md  ai-features.md  api-reference.md  application-state-integration.md  options-entry-checklist.md  reflection.md  setup-instructions.md  strategy-backtest-engine.md  strategy-definitions.md  technical-architecture-spec.md  trading-workflows.md  tradingview-chart-plan.md  transcript-breakdown.md  watchlist.md
docs/api/: trading-intelligence-analytics.md  trading-intelligence-daily.md  trading-intelligence-decisions.md  trading-intelligence-sessions.md  trading-intelligence-trades.md
docs/architecture/: final-ssot-production-alignment.md  ssot-v1-production.md  v1-system-overview.md  v2-daily-report-source-map.md  v2-decision-journal-source-map.md  v2-strategy-analytics-source-map.md  v2-trade-report-source-map.md  v2-trading-session-source-map.md
docs/automation/: execution-boundary.md  launch-runbook.md  market-hours-runbook.md  paper-trading-operations-runbook.md  phase-2-6-configurable-universe.md  phase-2a-safety-foundation.md  (+5 more)
examples/rest/gpt5-openai-agents-sdk-polygon-mcp/: README.md  pyproject.toml
gpt-instructions/: "I want to create a new strategy called   instructions.md
python-screener-service/: .env.example  AGENT_README.md  Dockerfile  main.py  requirements.txt  screener.py
server/: .env.example  .gitignore  AGENT_README.md  Dockerfile  README.md  package.json  tsconfig.json
trade-chart-client-refference/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+518 files in other folders)
