[project]
name = "gpt5-polygonio-demo"
version = "0.1.0"
description = "Agentic workflow demo using GPT-5, OpenAI Agents SDK and Polygon.io"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
  { name = "Alex Novotny" }
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
  "openai-agents",
  "pydantic",
  "rich",
  "python-dotenv",
  "openai",
  "httpx",
  "fastapi",
  "uvicorn",
  "beautifulsoup4",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-exporter-otlp",
  "mcp_polygon @ git+https://github.com/polygon-io/mcp_polygon@v0.4.0",
  "sift-cli[anthropic] @ git+https://github.com/gitfitbro/sift.git",
  "pandas>=2.0",
  "pandas_ta>=0.4.67b0",
  "numpy>=1.24",
]

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly track local packages that contain runtime code.
packages = ["core", "cli"]
# Expose the CLI and API entrypoints as standalone modules.
py-modules = ["main", "api"]
# Do not include data from folders like images/ or reports/
include-package-data = false

# Optional: explicitly exclude folders that cause issues
[tool.setuptools.exclude-package-data]
"*" = ["images/*", "reports/*"]
