[project]
name = "gpt5-polygonio-demo"
version = "0.1.0"
description = "Agentic workflow demo using GPT-5, OpenAI Agents SDK and Polygon.io"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Alex Novotny" }
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
  "openai-agents",
  "pydantic",
  "rich",
  "python-dotenv",
  "openai"
]

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Do NOT auto-discover packages
packages = []
# Treat your main script as a standalone module
py-modules = ["main"]
# Do not include data from folders like images/ or reports/
include-package-data = false

# Optional: explicitly exclude folders that cause issues
[tool.setuptools.exclude-package-data]
"*" = ["images/*", "reports/*"]
